--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="google" content="notranslate" />
+  <meta http-equiv="Content-Language" content="en_US" />
   <title>Frontend</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
